--- a/StackOverBros2/StackOverBros2.csproj
+++ b/StackOverBros2/StackOverBros2.csproj
@@ -74,7 +74,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Objects\IChallenge.cs" />
+    <Compile Include="Objects\Challenge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
